@@ -1,24 +1,10 @@
 package com.datasqrl.config;
 
-import com.datasqrl.canonicalizer.Name;
-import com.datasqrl.error.CollectedException;
-import com.datasqrl.error.ErrorCollector;
-import com.datasqrl.error.ResourceFileUtil;
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.google.common.base.Preconditions;
-import com.google.common.base.Strings;
-
-import com.networknt.schema.JsonSchema;
-import com.networknt.schema.JsonSchemaFactory;
-import com.networknt.schema.SpecVersion.VersionFlag;
-import com.networknt.schema.ValidationMessage;
 import java.io.IOException;
 import java.io.StringReader;
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.lang.reflect.ParameterizedType;
-import java.lang.reflect.Type;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -32,14 +18,9 @@ import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.Set;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
-import lombok.NonNull;
+
 import org.apache.commons.configuration2.BaseHierarchicalConfiguration;
 import org.apache.commons.configuration2.CombinedConfiguration;
 import org.apache.commons.configuration2.Configuration;
@@ -50,6 +31,23 @@ import org.apache.commons.configuration2.builder.fluent.Parameters;
 import org.apache.commons.configuration2.ex.ConfigurationException;
 import org.apache.commons.configuration2.tree.NodeCombiner;
 import org.apache.commons.configuration2.tree.OverrideCombiner;
+
+import com.datasqrl.canonicalizer.Name;
+import com.datasqrl.error.CollectedException;
+import com.datasqrl.error.ErrorCollector;
+import com.datasqrl.error.ResourceFileUtil;
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.base.Preconditions;
+import com.google.common.base.Strings;
+import com.networknt.schema.JsonSchemaFactory;
+import com.networknt.schema.SpecVersion.VersionFlag;
+
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.NonNull;
 
 /**
  * Implementions of {@link SqrlConfig} based on Apache commons configuration (v2)
@@ -72,7 +70,7 @@ public class SqrlConfigCommons implements SqrlConfig {
   public int getVersion() {
     errors.checkFatal(config.containsKey(VERSION_KEY),
         "Configuration file does not have a `version`.");
-    int version = config.getInt(VERSION_KEY, 0);
+    var version = config.getInt(VERSION_KEY, 0);
     errors.checkFatal(version > 0, "Invalid version: %s", version);
     return version;
   }
@@ -84,10 +82,15 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   @Override
   public boolean hasSubConfig(String name) {
-    String subConfigPrefix = getFullKey(name) + DELIMITER;
+    var subConfigPrefix = getFullKey(name) + DELIMITER;
 
     return config.getKeys(subConfigPrefix)
         .hasNext(); // If there is at least one key, return true
+  }
+
+  @Override
+  public void validateSubConfig(String name) {
+    errors.checkFatal(hasSubConfig(name), "Missing sub-configuration under key: %s", getFullKey(name));
   }
 
   private String getPrefix(String name) {
@@ -109,7 +112,7 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   private static String getLocalKey(String key) {
     //find the first delimiter that isn't a double delimiter
-    int index = 0;
+    var index = 0;
     while ((index = key.indexOf(DELIMITER, index)) >= 0) {
       if (key.length() > index + 2 && key.charAt(index + 1) == DELIMITER) {
         index = index + 2;
@@ -123,11 +126,12 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   @Override
   public Iterable<String> getKeys() {
-    LinkedHashSet<String> localKeys = new LinkedHashSet<>();
+    var localKeys = new LinkedHashSet<String>();
     getAllKeys().forEach(relativeKey -> {
-      String localKey = getLocalKey(relativeKey);
-      if (!Strings.isNullOrEmpty(localKey))
+      var localKey = getLocalKey(relativeKey);
+      if (!Strings.isNullOrEmpty(localKey)) {
         localKeys.add(localKey);
+    }
     });
     return localKeys;
   }
@@ -135,9 +139,10 @@ public class SqrlConfigCommons implements SqrlConfig {
   private Iterable<String> getAllKeys() {
     List<String> allKeys = new ArrayList<>();
     config.getKeys(prefix).forEachRemaining(subKey -> {
-      String suffix = relativeKey(subKey);
-      if (!Strings.isNullOrEmpty(suffix))
+      var suffix = relativeKey(subKey);
+      if (!Strings.isNullOrEmpty(suffix)) {
         allKeys.add(suffix);
+    }
     });
     return allKeys;
   }
@@ -149,11 +154,12 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   @Override
   public <T> Value<T> as(String key, Class<T> clazz) {
-    String fullKey = getFullKey(key);
-    String expandKey = expandKey(key);
+    var fullKey = getFullKey(key);
+    var expandKey = expandKey(key);
     if (isBasicClass(clazz)) { //Direct mapping
-      if (!config.containsKey(fullKey))
+      if (!config.containsKey(fullKey)) {
         return new ValueImpl<>(expandKey, errors, Optional.empty());
+    }
       return new ValueImpl<>(expandKey, errors, Optional.of(config.get(clazz, fullKey)));
     } else {
       //Try to map class by field
@@ -168,24 +174,26 @@ public class SqrlConfigCommons implements SqrlConfig {
         || Duration.class.isAssignableFrom(clazz);
   }
 
-  public <T> Value<T> allAs(Class<T> clazz) {
+  @Override
+public <T> Value<T> allAs(Class<T> clazz) {
     errors.checkFatal(!isBasicClass(clazz), "Cannot map configuration onto a basic class: %s",
         clazz.getName());
     try {
-      T value = clazz.newInstance();
+      var value = clazz.getDeclaredConstructor().newInstance();
       for (Field field : clazz.getDeclaredFields()) {
-        if (Modifier.isStatic(field.getModifiers()))
-          continue;
+        if (Modifier.isStatic(field.getModifiers())) {
+            continue;
+        }
         field.setAccessible(true);
         Class<?> fieldClass = field.getType();
         Value configValue;
         if (fieldClass.isAssignableFrom(ArrayList.class)) {
-          Type genericType = field.getGenericType();
+          var genericType = field.getGenericType();
           errors.checkFatal(genericType instanceof ParameterizedType,
               "Field [%s] on class [%s] does not have a valid generic type",
               field.getName(), clazz.getName());
-          ParameterizedType parameterizedType = (ParameterizedType) genericType;
-          Type[] typeArguments = parameterizedType.getActualTypeArguments();
+          var parameterizedType = (ParameterizedType) genericType;
+          var typeArguments = parameterizedType.getActualTypeArguments();
           errors.checkFatal(typeArguments.length == 1 && typeArguments[0] instanceof Class,
               "Field [%s] on class [%s] does not have a valid generic type",
               field.getName(), clazz.getName());
@@ -202,8 +210,9 @@ public class SqrlConfigCommons implements SqrlConfig {
       }
       return new ValueImpl<>(prefix, errors, Optional.of(value));
     } catch (Exception e) {
-      if (e instanceof CollectedException)
-        throw (CollectedException) e;
+      if (e instanceof CollectedException exception) {
+        throw exception;
+    }
       throw errors.exception("Could not map configuration values on "
           + "object of clazz [%s]: %s", clazz.getName(), e.toString());
     }
@@ -212,7 +221,7 @@ public class SqrlConfigCommons implements SqrlConfig {
   @Override
   public <T> Value<List<T>> asList(String key, Class<T> clazz) {
     Preconditions.checkArgument(isBasicClass(clazz), "Not a basic class: " + clazz);
-    String fullKey = getFullKey(key);
+    var fullKey = getFullKey(key);
     List<T> list = List.of();
     if (config.containsKey(fullKey)) {
       list = config.getList(clazz, fullKey);
@@ -222,7 +231,7 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   @Override
   public <T> Value<LinkedHashMap<String, T>> asMap(String key, Class<T> clazz) {
-    LinkedHashMap<String, T> map = new LinkedHashMap<>();
+    var map = new LinkedHashMap<String, T>();
     SqrlConfig subConfig = getSubConfig(key);
     subConfig.getKeys().forEach(subKey -> map.put(subKey, subConfig.as(subKey, clazz).get()));
     return new ValueImpl<>(expandKey(key), errors, Optional.of(map));
@@ -246,16 +255,19 @@ public class SqrlConfigCommons implements SqrlConfig {
         clazz.getName());
     try {
       for (Field field : clazz.getDeclaredFields()) {
-        if (Modifier.isStatic(field.getModifiers()))
-          continue;
+        if (Modifier.isStatic(field.getModifiers())) {
+            continue;
+        }
         field.setAccessible(true);
-        Object fieldValue = field.get(value);
-        if (fieldValue != null)
-          setProperty(field.getName(), fieldValue);
+        var fieldValue = field.get(value);
+        if (fieldValue != null) {
+            setProperty(field.getName(), fieldValue);
+        }
       }
     } catch (Exception e) {
-      if (e instanceof CollectedException)
-        throw (CollectedException) e;
+      if (e instanceof CollectedException exception) {
+        throw exception;
+    }
       throw errors.exception("Could not access fields "
           + "of clazz [%s]: %s", clazz.getName(), e.getMessage());
     }
@@ -264,7 +276,7 @@ public class SqrlConfigCommons implements SqrlConfig {
   @Override
   public void copy(SqrlConfig from) {
     Preconditions.checkArgument(from instanceof SqrlConfigCommons);
-    SqrlConfigCommons other = (SqrlConfigCommons) from;
+    var other = (SqrlConfigCommons) from;
     for (String sub : other.getAllKeys()) {
       config.setProperty(expandKey(sub), other.config.getProperty(other.expandKey(sub)));
     }
@@ -277,17 +289,17 @@ public class SqrlConfigCommons implements SqrlConfig {
         Files.writeString(file, "{}", StandardCharsets.UTF_8, StandardOpenOption.CREATE,
             StandardOpenOption.WRITE);
       }
-      Parameters params = new Parameters();
-      FileBasedConfigurationBuilder<JSONConfiguration> builder = new FileBasedConfigurationBuilder<>(
+      var params = new Parameters();
+      var builder = new FileBasedConfigurationBuilder<>(
           JSONConfiguration.class)
           .configure(params.fileBased().setFile(file.toFile()));
-      JSONConfiguration outputConfig = builder.getConfiguration();
+      var outputConfig = builder.getConfiguration();
       outputConfig.append(config.subset(prefix));
       builder.save();
 
       //Pretty print
-      ObjectMapper objectMapper = new ObjectMapper();
-      JsonNode jsonNode = objectMapper.readTree(file.toFile());
+      var objectMapper = new ObjectMapper();
+      var jsonNode = objectMapper.readTree(file.toFile());
       objectMapper.writerWithDefaultPrettyPrinter().writeValue(file.toFile(), jsonNode);
     } catch (ConfigurationException | IOException e) {
       throw errors.withConfig(file).handle(e);
@@ -296,11 +308,12 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   @Override
   public Map<String, Object> toMap() {
-    LinkedHashMap<String, Object> map = new LinkedHashMap<>();
+    var map = new LinkedHashMap<String, Object>();
     getKeys().forEach(localKey -> {
-      String fullKey = getFullKey(localKey);
+      var fullKey = getFullKey(localKey);
       if (config.containsKey(fullKey)) {
         Object value;
+        //TODO: Generalize instead of hard-coding
         if (localKey.equalsIgnoreCase("enabled-engines")) {
           value = config.getList(fullKey);
         } else {
@@ -309,7 +322,7 @@ public class SqrlConfigCommons implements SqrlConfig {
         //TODO: this does not interpolate secrets. need to check type and then use type specific access method
         map.put(localKey, value);
       } else {
-        SqrlConfigCommons subConfig = getSubConfig(localKey);
+        var subConfig = getSubConfig(localKey);
         map.put(localKey, subConfig.toMap());
       }
     });
@@ -318,7 +331,7 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   @Override
   public Map<String, String> toStringMap() {
-    LinkedHashMap<String, String> map = new LinkedHashMap<>();
+    var map = new LinkedHashMap<String, String>();
     toMap().forEach((k, v) -> map.put(k, String.valueOf(v)));
     return map;
   }
@@ -335,36 +348,41 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   @Override
   public boolean hasKey(String key) {
-    String fullKey = getFullKey(key);
+    var fullKey = getFullKey(key);
     return config.containsKey(fullKey);
   }
 
   public static SqrlConfig create(ErrorCollector errors, int version) {
     Configuration config = new BaseHierarchicalConfiguration();
-    SqrlConfigCommons newconfig = new SqrlConfigCommons(errors, null, config, "");
+    var newconfig = new SqrlConfigCommons(errors, null, config, "");
     newconfig.setProperty(VERSION_KEY, version);
     return newconfig;
   }
 
   public static TableConfigImpl fromFilesTableConfig(@NonNull Name name, ErrorCollector errors,
       @NonNull List<Path> files) {
-    return new TableConfigImpl(name, fromFiles(errors, "/jsonSchema/tableConfig.json", files));
+    return new TableConfigImpl(name, getPackageConfig(errors, "/jsonSchema/tableConfig.json", files));
+  }
+
+  public static PackageJson getDefaultPackageJson(ErrorCollector errors) {
+    return fromFilesPackageJson(errors, List.of());
   }
 
   public static PackageJson fromFilesPackageJson(ErrorCollector errors, @NonNull List<Path> files) {
-    return new PackageJsonImpl(fromFiles(errors, "/jsonSchema/packageSchema.json", files));
+    return new PackageJsonImpl(getPackageConfig(errors, "/jsonSchema/packageSchema.json", files));
   }
 
   public static PackageJson fromFilesPublishPackageJson(ErrorCollector errors, @NonNull List<Path> files) {
-    return new PackageJsonImpl(fromFiles(errors, "/jsonSchema/publishPackageSchema.json", files));
+    return new PackageJsonImpl(getPackageConfig(errors, "/jsonSchema/publishPackageSchema.json", files));
   }
 
   public static boolean validateJsonFile(Path jsonFilePath, String schemaResourcePath,
       ErrorCollector errors) {
-    if (schemaResourcePath == null)
-      return true;
-    ErrorCollector allErrors = errors.abortOnFatal(false); //so we can collect all errors
-    ObjectMapper mapper = new ObjectMapper();
+    if (schemaResourcePath == null) {
+        return true;
+    }
+    var allErrors = errors.abortOnFatal(false); //so we can collect all errors
+    var mapper = new ObjectMapper();
     JsonNode json, schemaNode;
     try {
       json = mapper.readTree(jsonFilePath.toFile());
@@ -372,7 +390,7 @@ public class SqrlConfigCommons implements SqrlConfig {
       allErrors.fatal("Could not read json file [%s]: %s", jsonFilePath, e);
       return false;
     }
-    String jsonSchema = ResourceFileUtil.readResourceFileContents(schemaResourcePath);
+    var jsonSchema = ResourceFileUtil.readResourceFileContents(schemaResourcePath);
     try {
       schemaNode = mapper.readTree(jsonSchema);
     } catch (IOException e) {
@@ -381,15 +399,16 @@ public class SqrlConfigCommons implements SqrlConfig {
       return false;
     }
 
-    JsonSchemaFactory jsonSchemaFactory = JsonSchemaFactory.getInstance(VersionFlag.V202012);
-    JsonSchema schema = jsonSchemaFactory.getSchema(schemaNode);
+    var jsonSchemaFactory = JsonSchemaFactory.getInstance(VersionFlag.V202012);
+    var schema = jsonSchemaFactory.getSchema(schemaNode);
 
-    Set<ValidationMessage> validationMessages = schema.validate(json, executionContext -> {
+    var validationMessages = schema.validate(json, executionContext -> {
       // By default since Draft 2019-09 the format keyword only generates annotations and not assertions
       executionContext.getExecutionConfig().setFormatAssertionsEnabled(true);
     });
-    if (validationMessages.isEmpty())
-      return true;
+    if (validationMessages.isEmpty()) {
+        return true;
+    }
     validationMessages.forEach(vm -> {
       allErrors.fatal("%s at location [%s]", vm.getMessage(), vm.getInstanceLocation());
     });
@@ -397,19 +416,19 @@ public class SqrlConfigCommons implements SqrlConfig {
   }
 
   public static SqrlConfig fromFiles(ErrorCollector errors, @NonNull Path firstFile) {
-    return fromFiles(errors, null, List.of(firstFile));
+    return getPackageConfig(errors, null, List.of(firstFile));
   }
 
-  public static SqrlConfig fromFiles(ErrorCollector errors, String jsonSchemaResource, @NonNull List<Path> files) {
-    Preconditions.checkArgument(files!=null && !files.isEmpty(),"Need to provide at least one configuration file");
-    Configurations configs = new Configurations();
-    boolean isValid = true;
+  public static SqrlConfig getPackageConfig(ErrorCollector errors, String jsonSchemaResource, @NonNull List<Path> files) {
+    var configs = new Configurations();
+    var isValid = true;
 
     NodeCombiner combiner = new OverrideCombiner();
-    CombinedConfiguration combinedConfiguration = new CombinedConfiguration(combiner);
-    for (int i = files.size()-1; i >= 0; i--) { //iterate backwards so last file takes precedence
-      Path file = files.get(i);
-      ErrorCollector localErrors = errors.withConfig(file);
+    var combinedConfiguration = new CombinedConfiguration(combiner);
+
+    for (var i = files.size()-1; i >= 0; i--) { //iterate backwards so last file takes precedence
+      var file = files.get(i);
+      var localErrors = errors.withConfig(file);
       isValid &= validateJsonFile(file, jsonSchemaResource, localErrors);
       try {
         Configuration nextconfig = configs.fileBased(JSONConfiguration.class, file.toFile());
@@ -418,7 +437,22 @@ public class SqrlConfigCommons implements SqrlConfig {
         throw localErrors.handle(e);
       }
     }
-    String configFilename = files.get(0).toString();
+
+    try {
+      var url = SqrlConfigCommons.class.getResource("/default-package.json");
+      var config = configs.fileBased(JSONConfiguration.class,   url);
+      combinedConfiguration.addConfiguration(config);
+    } catch (ConfigurationException e) {
+      throw errors.withConfig("Error loading default configuration").handle(e);
+    }
+
+    String configFilename;
+    if (files.isEmpty()){
+        configFilename = "default-package.json";
+    } else {
+        configFilename = files.get(0).toString();
+    }
+
     if (!isValid) {
       throw errors.exception("Configuration file invalid: %s", files);
     }
@@ -427,10 +461,10 @@ public class SqrlConfigCommons implements SqrlConfig {
   }
 
   public static SqrlConfig fromURL(ErrorCollector errors, @NonNull URL url) {
-    Configurations configs = new Configurations();
+    var configs = new Configurations();
     try {
       Configuration config = configs.fileBased(JSONConfiguration.class, url);
-      String configFilename = url.toString();
+      var configFilename = url.toString();
       return new SqrlConfigCommons(errors.withConfig(configFilename), configFilename, config, "");
     } catch (ConfigurationException e) {
       throw errors.withConfig(url.toString()).handle(e);
@@ -439,11 +473,11 @@ public class SqrlConfigCommons implements SqrlConfig {
 
   public static SqrlConfig fromString(ErrorCollector errors, @NonNull String string) {
     try {
-      StringReader reader = new StringReader(string);
+      var reader = new StringReader(string);
 
-      JSONConfiguration config = new JSONConfiguration();
+      var config = new JSONConfiguration();
       config.read(reader);
-      String configFilename = "local";
+      var configFilename = "local";
       return new SqrlConfigCommons(errors.withConfig(configFilename), configFilename, config, "");
     } catch (ConfigurationException e) {
       throw errors.withConfig("local").handle(e);
@@ -510,7 +544,9 @@ public class SqrlConfigCommons implements SqrlConfig {
       Configuration config = new BaseHierarchicalConfiguration();
       configs.forEach(config::setProperty);
       ErrorCollector configErrors = errors;
-      if (!Strings.isNullOrEmpty(configFilename)) configErrors = configErrors.withConfig(configFilename);
+      if (!Strings.isNullOrEmpty(configFilename)) {
+        configErrors = configErrors.withConfig(configFilename);
+    }
       return new SqrlConfigCommons(configErrors, configFilename, config, prefix);
     }
   }
